--- a/Desafio/dsf012/style.css
+++ b/Desafio/dsf012/style.css
@@ -36,6 +36,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
     
 }
 
@@ -60,6 +61,7 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -74,8 +76,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.479);
+    padding: 5px;
 }
 
 footer {
