--- a/Desafio/dsf012/style.css
+++ b/Desafio/dsf012/style.css
@@ -36,7 +36,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-size: 10vw;
+    font-size: 8vw;
     
 }
 
@@ -62,6 +62,7 @@ section {
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 3.5vw;
+    text-shadow: 1px 1px 1px;
 }
 
 section.normal {
@@ -73,12 +74,28 @@ section.normal {
 section.imagem {
     background-color: rgb(46, 46, 46);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
+
+section#img01 {
+    background-image: url('../dsf012/imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../dsf012/imagens/background002.jpg');
+    background-position: right center;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.479);
+    background-color: rgba(0, 0, 0, 0.644);
     padding: 5px;
+    text-shadow: 1px 2px 0px black;
+    
 }
 
 footer {
