--- a/Exercícios/ex026/mq004/estilos/style.css
+++ b/Exercícios/ex026/mq004/estilos/style.css
@@ -4,26 +4,46 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3em;
-    margin: 0px;
+    font-size: 1em;
     padding: 0px;
     box-sizing: border-box;
 }
 
-body, html {
-    width: 100vw;
+html {
     height: 100vh;
 }
 
 body {
-    background: black url(../imagens/back-phone.jpg) no repeat;
+    background: black url(../imagens/back-phone.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
 
 }
 
 main {
-    background-color: rgba(255, 255, 255, 0.842);
+    background-color: rgba(255, 255, 255, 0.901);
     width: 90vw;
+    margin-top: 20px;
     margin: auto;
     border-radius: 10px;
     padding: 10px;
+    width: ;
 }
+
+h1 {
+    text-align: center;
+    color: white;
+    text-shadow: 1px 1px 0px black;
+    font-size: 2em;
+}
+
+img {
+    display: block;
+    margin: auto;
+}
+
+img#phone {display: block;}
+img#tablet {display: none;}
+img#print {display: none;}
+img#pc {display: none;}
+img#tv {display: none;}
