--- a/Exercícios/ex027/flex013-menu flexbox/style.css
+++ b/Exercícios/ex027/flex013-menu flexbox/style.css
@@ -17,26 +17,41 @@ body {
 header {
     background-color: grey;
     color: white;
-    padding: 10px;
+    padding: 0px 10px;
+
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header > h1 {
     padding: 10px;
     margin-bottom: 10px;
-    text-shadow: 1px 1px 3px black;
+    text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    flex: 0 0 200px;
+}
+
+header > nav {
+    display: flex;
+    flex-flow: row wrap;
 }
 
 header > nav > a {
     padding: 8px;
     color: white;
-    border: 1px solid black;
     border-radius: 5px;
-    background-color: rgb(87, 87, 87);
+    background-color: black;
     text-decoration: none;
+    margin: 5px;
+    
 }
 
 header > nav >  a:hover {
-    background-color: gray;
+    background-color: white;
+    color: black;
+    transition: background-color .5s;
 }
 
 main {
